fix(styles): add the missing margin below ordered lists

--- a/styles/_article.scss
+++ b/styles/_article.scss
@@ -1,6 +1,7 @@
 .article-body {
   p,
   ul,
+  ol,
   pre {
     margin-bottom: 2rem;
   }
